myParserPrintf.output
Terminals unused in grammar

    STRING
    CHARACTER
    LESS
    GREATER
    ']'
    '['


Grammar

    0 $accept: program $end

    1 program: program_element
    2        | program program_element

    3 program_element: stmt
    4                | struct_decl
    5                | enum_decl
    6                | method_decl
    7                | constructor_decl
    8                | destructor_decl
    9                | field_decl

   10 standard_type: FLOAT_KW
   11              | DOUBLE_KW
   12              | DECIMAL_KW
   13              | BOOL_KW

   14 access_expr: '(' expr ')'
   15            | INTEGER
   16            | FLOATING_POINT
   17            | FLOAT_LITERAL
   18            | DECIMAL_LITERAL
   19            | TRUE_KW
   20            | FALSE_KW
   21            | IDENTIFIER
   22            | access_expr '.' IDENTIFIER
   23            | access_expr '.' IDENTIFIER '(' expr_seq_optional ')'
   24            | interpolated_string

   25 expr_seq: expr
   26         | expr_seq ',' expr

   27 expr_seq_optional: %empty
   28                  | expr_seq

   29 expr: expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr
   33     | expr '=' expr
   34     | expr PLUS_ASSIGN expr
   35     | expr MINUS_ASSIGN expr
   36     | expr MULTIPLY_ASSIGN expr
   37     | expr DIVISION_ASSIGN expr
   38     | expr '<' expr
   39     | expr '>' expr
   40     | expr EQUAL expr
   41     | expr NOT_EQUAL expr
   42     | expr LESS_OR_EQUAL expr
   43     | expr GREATER_OR_EQUAL expr
   44     | expr AND expr
   45     | expr OR expr
   46     | expr BITWISE_AND expr
   47     | expr BITWISE_OR expr
   48     | '!' expr
   49     | INCREMENT expr
   50     | DECREMENT expr
   51     | '+' expr
   52     | '-' expr
   53     | NULL_KW
   54     | access_expr

   55 visibility_modifier: PUBLIC
   56                    | PROTECTED
   57                    | PRIVATE
   58                    | INTERNAL
   59                    | PROTECTED_INTERNAL

   60 constructor_decl: visibility_modifier class_name '(' method_arguments_optional ')' '{' stmt_seq_optional '}'

   61 static_constructor_decl: STATIC class_name '(' ')' '{' stmt_seq_optional '}'

   62 destructor_decl: TILDE class_name '(' ')' '{' stmt_seq_optional '}'

   63 class_name: IDENTIFIER

   64 method_arguments: var_decl
   65                 | method_arguments ',' var_decl

   66 method_arguments_optional: %empty
   67                          | method_arguments

   68 method_decl: visibility_modifier type method_name '(' method_arguments_optional ')' '{' stmt_seq_optional '}'

   69 method_name: IDENTIFIER

   70 var_decl: type IDENTIFIER

   71 type: standard_type
   72     | access_expr

   73 stmt: ';'
   74     | expr ';'
   75     | '{' stmt_seq_optional '}'

   76 stmt_seq: stmt
   77         | stmt_seq stmt

   78 stmt_seq_optional: %empty
   79                  | stmt_seq

   80 enumerators: IDENTIFIER
   81            | enumerators ',' IDENTIFIER

   82 enum_decl: PUBLIC ENUM class_name '{' enumerators '}'

   83 interpolated_string: INTERPOLATED_STRING_START interpolated_string_content INTERPOLATED_STRING_END

   84 interpolated_string_content: %empty
   85                            | INTERPOLATED_STRING_TEXT interpolated_string_content
   86                            | INTERPOLATED_STRING_EXPR expr interpolated_string_content

   87 struct_members: field_decl
   88               | method_decl
   89               | static_constructor_decl
   90               | struct_members field_decl
   91               | struct_members method_decl
   92               | struct_members static_constructor_decl

   93 field_decl: visibility_modifier var_decl ';'

   94 struct_members_optional: %empty
   95                        | struct_members

   96 struct_decl: PUBLIC STRUCT class_name '{' struct_members_optional '}'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 48
    '(' (40) 14 23 60 61 62 68
    ')' (41) 14 23 60 61 62 68
    '*' (42) 31
    '+' (43) 29 51
    ',' (44) 26 65 81
    '-' (45) 30 52
    '.' (46) 22 23
    '/' (47) 32
    ';' (59) 73 74 93
    '<' (60) 38
    '=' (61) 33
    '>' (62) 39
    '[' (91)
    ']' (93)
    '{' (123) 60 61 62 68 75 82 96
    '}' (125) 60 61 62 68 75 82 96
    error (256)
    IDENTIFIER <_identifier> (258) 21 22 23 63 69 70 80 81
    INTEGER <_integer> (259) 15
    FLOATING_POINT <_floatingPoint> (260) 16
    FLOAT_LITERAL <_floatValue> (261) 17
    STRING <_string> (262)
    CHARACTER <_character> (263)
    DECIMAL_LITERAL <_floatingPoint> (264) 18
    BOOL_KW (265) 13
    FLOAT_KW (266) 10
    DOUBLE_KW (267) 11
    DECIMAL_KW (268) 12
    NULL_KW (269) 53
    TRUE_KW (270) 19
    FALSE_KW (271) 20
    PUBLIC (272) 55 82 96
    PROTECTED (273) 56
    PRIVATE (274) 57
    INTERNAL (275) 58
    PROTECTED_INTERNAL (276) 59
    STATIC (277) 61
    STRUCT (278) 96
    ENUM (279) 82
    TILDE (280) 62
    INTERPOLATED_STRING_START (281) 83
    INTERPOLATED_STRING_END (282) 83
    INTERPOLATED_STRING_TEXT (283) 85
    INTERPOLATED_STRING_EXPR (284) 86
    PLUS_ASSIGN (285) 34
    MINUS_ASSIGN (286) 35
    MULTIPLY_ASSIGN (287) 36
    DIVISION_ASSIGN (288) 37
    INCREMENT (289) 49
    DECREMENT (290) 50
    LESS (291)
    GREATER (292)
    EQUAL (293) 40
    NOT_EQUAL (294) 41
    GREATER_OR_EQUAL (295) 43
    LESS_OR_EQUAL (296) 42
    OR (297) 45
    AND (298) 44
    BITWISE_OR (299) 47
    BITWISE_AND (300) 46
    UNARY_MINUS (301)
    UNARY_PLUS (302)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program (66)
        on left: 1 2
        on right: 0 2
    program_element (67)
        on left: 3 4 5 6 7 8 9
        on right: 1 2
    standard_type (68)
        on left: 10 11 12 13
        on right: 71
    access_expr <_accessExpr> (69)
        on left: 14 15 16 17 18 19 20 21 22 23 24
        on right: 22 23 54 72
    expr_seq <_exprSeq> (70)
        on left: 25 26
        on right: 26 28
    expr_seq_optional <_exprSeq> (71)
        on left: 27 28
        on right: 23
    expr <_expr> (72)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 14 25 26 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 74 86
    visibility_modifier (73)
        on left: 55 56 57 58 59
        on right: 60 68 93
    constructor_decl <_constructorDecl> (74)
        on left: 60
        on right: 7
    static_constructor_decl <_constructorDecl> (75)
        on left: 61
        on right: 89 92
    destructor_decl <_destructorDecl> (76)
        on left: 62
        on right: 8
    class_name <_className> (77)
        on left: 63
        on right: 60 61 62 82 96
    method_arguments <_methodArguments> (78)
        on left: 64 65
        on right: 65 67
    method_arguments_optional <_methodArguments> (79)
        on left: 66 67
        on right: 60 68
    method_decl <_methodDecl> (80)
        on left: 68
        on right: 6 88 91
    method_name <_methodName> (81)
        on left: 69
        on right: 68
    var_decl <_varDecl> (82)
        on left: 70
        on right: 64 65 93
    type <_type> (83)
        on left: 71 72
        on right: 68 70
    stmt <_stmt> (84)
        on left: 73 74 75
        on right: 3 76 77
    stmt_seq <_stmtSeq> (85)
        on left: 76 77
        on right: 77 79
    stmt_seq_optional <_stmtSeq> (86)
        on left: 78 79
        on right: 60 61 62 68 75
    enumerators <_enumerators> (87)
        on left: 80 81
        on right: 81 82
    enum_decl <_enumDecl> (88)
        on left: 82
        on right: 5
    interpolated_string <_interpolatedString> (89)
        on left: 83
        on right: 24
    interpolated_string_content <_interpolatedString> (90)
        on left: 84 85 86
        on right: 83 85 86
    struct_members <_structMembers> (91)
        on left: 87 88 89 90 91 92
        on right: 90 91 92 95
    field_decl <_fieldDecl> (92)
        on left: 93
        on right: 9 87 90
    struct_members_optional <_structMembers> (93)
        on left: 94 95
        on right: 96
    struct_decl <_structDecl> (94)
        on left: 96
        on right: 4


State 0

    0 $accept: . program $end

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    PUBLIC                     shift, and go to state 9
    PROTECTED                  shift, and go to state 10
    PRIVATE                    shift, and go to state 11
    INTERNAL                   shift, and go to state 12
    PROTECTED_INTERNAL         shift, and go to state 13
    TILDE                      shift, and go to state 14
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21
    '{'                        shift, and go to state 22
    ';'                        shift, and go to state 23

    program              go to state 24
    program_element      go to state 25
    access_expr          go to state 26
    expr                 go to state 27
    visibility_modifier  go to state 28
    constructor_decl     go to state 29
    destructor_decl      go to state 30
    method_decl          go to state 31
    stmt                 go to state 32
    enum_decl            go to state 33
    interpolated_string  go to state 34
    field_decl           go to state 35
    struct_decl          go to state 36


State 1

   21 access_expr: IDENTIFIER .

    $default  reduce using rule 21 (access_expr)


State 2

   15 access_expr: INTEGER .

    $default  reduce using rule 15 (access_expr)


State 3

   16 access_expr: FLOATING_POINT .

    $default  reduce using rule 16 (access_expr)


State 4

   17 access_expr: FLOAT_LITERAL .

    $default  reduce using rule 17 (access_expr)


State 5

   18 access_expr: DECIMAL_LITERAL .

    $default  reduce using rule 18 (access_expr)


State 6

   53 expr: NULL_KW .

    $default  reduce using rule 53 (expr)


State 7

   19 access_expr: TRUE_KW .

    $default  reduce using rule 19 (access_expr)


State 8

   20 access_expr: FALSE_KW .

    $default  reduce using rule 20 (access_expr)


State 9

   55 visibility_modifier: PUBLIC .
   82 enum_decl: PUBLIC . ENUM class_name '{' enumerators '}'
   96 struct_decl: PUBLIC . STRUCT class_name '{' struct_members_optional '}'

    STRUCT  shift, and go to state 37
    ENUM    shift, and go to state 38

    $default  reduce using rule 55 (visibility_modifier)


State 10

   56 visibility_modifier: PROTECTED .

    $default  reduce using rule 56 (visibility_modifier)


State 11

   57 visibility_modifier: PRIVATE .

    $default  reduce using rule 57 (visibility_modifier)


State 12

   58 visibility_modifier: INTERNAL .

    $default  reduce using rule 58 (visibility_modifier)


State 13

   59 visibility_modifier: PROTECTED_INTERNAL .

    $default  reduce using rule 59 (visibility_modifier)


State 14

   62 destructor_decl: TILDE . class_name '(' ')' '{' stmt_seq_optional '}'

    IDENTIFIER  shift, and go to state 39

    class_name  go to state 40


State 15

   83 interpolated_string: INTERPOLATED_STRING_START . interpolated_string_content INTERPOLATED_STRING_END

    INTERPOLATED_STRING_TEXT  shift, and go to state 41
    INTERPOLATED_STRING_EXPR  shift, and go to state 42

    $default  reduce using rule 84 (interpolated_string_content)

    interpolated_string_content  go to state 43


State 16

   49 expr: INCREMENT . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 44
    interpolated_string  go to state 34


State 17

   50 expr: DECREMENT . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 45
    interpolated_string  go to state 34


State 18

   51 expr: '+' . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 46
    interpolated_string  go to state 34


State 19

   52 expr: '-' . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 47
    interpolated_string  go to state 34


State 20

   48 expr: '!' . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 48
    interpolated_string  go to state 34


State 21

   14 access_expr: '(' . expr ')'

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 49
    interpolated_string  go to state 34


State 22

   75 stmt: '{' . stmt_seq_optional '}'

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21
    '{'                        shift, and go to state 22
    ';'                        shift, and go to state 23

    $default  reduce using rule 78 (stmt_seq_optional)

    access_expr          go to state 26
    expr                 go to state 27
    stmt                 go to state 50
    stmt_seq             go to state 51
    stmt_seq_optional    go to state 52
    interpolated_string  go to state 34


State 23

   73 stmt: ';' .

    $default  reduce using rule 73 (stmt)


State 24

    0 $accept: program . $end
    2 program: program . program_element

    $end                       shift, and go to state 53
    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    PUBLIC                     shift, and go to state 9
    PROTECTED                  shift, and go to state 10
    PRIVATE                    shift, and go to state 11
    INTERNAL                   shift, and go to state 12
    PROTECTED_INTERNAL         shift, and go to state 13
    TILDE                      shift, and go to state 14
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21
    '{'                        shift, and go to state 22
    ';'                        shift, and go to state 23

    program_element      go to state 54
    access_expr          go to state 26
    expr                 go to state 27
    visibility_modifier  go to state 28
    constructor_decl     go to state 29
    destructor_decl      go to state 30
    method_decl          go to state 31
    stmt                 go to state 32
    enum_decl            go to state 33
    interpolated_string  go to state 34
    field_decl           go to state 35
    struct_decl          go to state 36


State 25

    1 program: program_element .

    $default  reduce using rule 1 (program)


State 26

   22 access_expr: access_expr . '.' IDENTIFIER
   23            | access_expr . '.' IDENTIFIER '(' expr_seq_optional ')'
   54 expr: access_expr .

    '.'  shift, and go to state 55

    $default  reduce using rule 54 (expr)


State 27

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr
   74 stmt: expr . ';'

    PLUS_ASSIGN       shift, and go to state 56
    MINUS_ASSIGN      shift, and go to state 57
    MULTIPLY_ASSIGN   shift, and go to state 58
    DIVISION_ASSIGN   shift, and go to state 59
    EQUAL             shift, and go to state 60
    NOT_EQUAL         shift, and go to state 61
    GREATER_OR_EQUAL  shift, and go to state 62
    LESS_OR_EQUAL     shift, and go to state 63
    OR                shift, and go to state 64
    AND               shift, and go to state 65
    BITWISE_OR        shift, and go to state 66
    BITWISE_AND       shift, and go to state 67
    '='               shift, and go to state 68
    '<'               shift, and go to state 69
    '>'               shift, and go to state 70
    '+'               shift, and go to state 71
    '-'               shift, and go to state 72
    '*'               shift, and go to state 73
    '/'               shift, and go to state 74
    ';'               shift, and go to state 75


State 28

   60 constructor_decl: visibility_modifier . class_name '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   68 method_decl: visibility_modifier . type method_name '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   93 field_decl: visibility_modifier . var_decl ';'

    IDENTIFIER                 shift, and go to state 76
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    BOOL_KW                    shift, and go to state 77
    FLOAT_KW                   shift, and go to state 78
    DOUBLE_KW                  shift, and go to state 79
    DECIMAL_KW                 shift, and go to state 80
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    '('                        shift, and go to state 21

    standard_type        go to state 81
    access_expr          go to state 82
    class_name           go to state 83
    var_decl             go to state 84
    type                 go to state 85
    interpolated_string  go to state 34


State 29

    7 program_element: constructor_decl .

    $default  reduce using rule 7 (program_element)


State 30

    8 program_element: destructor_decl .

    $default  reduce using rule 8 (program_element)


State 31

    6 program_element: method_decl .

    $default  reduce using rule 6 (program_element)


State 32

    3 program_element: stmt .

    $default  reduce using rule 3 (program_element)


State 33

    5 program_element: enum_decl .

    $default  reduce using rule 5 (program_element)


State 34

   24 access_expr: interpolated_string .

    $default  reduce using rule 24 (access_expr)


State 35

    9 program_element: field_decl .

    $default  reduce using rule 9 (program_element)


State 36

    4 program_element: struct_decl .

    $default  reduce using rule 4 (program_element)


State 37

   96 struct_decl: PUBLIC STRUCT . class_name '{' struct_members_optional '}'

    IDENTIFIER  shift, and go to state 39

    class_name  go to state 86


State 38

   82 enum_decl: PUBLIC ENUM . class_name '{' enumerators '}'

    IDENTIFIER  shift, and go to state 39

    class_name  go to state 87


State 39

   63 class_name: IDENTIFIER .

    $default  reduce using rule 63 (class_name)


State 40

   62 destructor_decl: TILDE class_name . '(' ')' '{' stmt_seq_optional '}'

    '('  shift, and go to state 88


State 41

   85 interpolated_string_content: INTERPOLATED_STRING_TEXT . interpolated_string_content

    INTERPOLATED_STRING_TEXT  shift, and go to state 41
    INTERPOLATED_STRING_EXPR  shift, and go to state 42

    $default  reduce using rule 84 (interpolated_string_content)

    interpolated_string_content  go to state 89


State 42

   86 interpolated_string_content: INTERPOLATED_STRING_EXPR . expr interpolated_string_content

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 90
    interpolated_string  go to state 34


State 43

   83 interpolated_string: INTERPOLATED_STRING_START interpolated_string_content . INTERPOLATED_STRING_END

    INTERPOLATED_STRING_END  shift, and go to state 91


State 44

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr
   49     | INCREMENT expr .

    $default  reduce using rule 49 (expr)


State 45

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr
   50     | DECREMENT expr .

    $default  reduce using rule 50 (expr)


State 46

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr
   51     | '+' expr .

    $default  reduce using rule 51 (expr)


State 47

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr
   52     | '-' expr .

    $default  reduce using rule 52 (expr)


State 48

   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr
   48     | '!' expr .

    $default  reduce using rule 48 (expr)


State 49

   14 access_expr: '(' expr . ')'
   29 expr: expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | expr . '=' expr
   34     | expr . PLUS_ASSIGN expr
   35     | expr . MINUS_ASSIGN expr
   36     | expr . MULTIPLY_ASSIGN expr
   37     | expr . DIVISION_ASSIGN expr
   38     | expr . '<' expr
   39     | expr . '>' expr
   40     | expr . EQUAL expr
   41     | expr . NOT_EQUAL expr
   42     | expr . LESS_OR_EQUAL expr
   43     | expr . GREATER_OR_EQUAL expr
   44     | expr . AND expr
   45     | expr . OR expr
   46     | expr . BITWISE_AND expr
   47     | expr . BITWISE_OR expr

    PLUS_ASSIGN       shift, and go to state 56
    MINUS_ASSIGN      shift, and go to state 57
    MULTIPLY_ASSIGN   shift, and go to state 58
    DIVISION_ASSIGN   shift, and go to state 59
    EQUAL             shift, and go to state 60
    NOT_EQUAL         shift, and go to state 61
    GREATER_OR_EQUAL  shift, and go to state 62
    LESS_OR_EQUAL     shift, and go to state 63
    OR                shift, and go to state 64
    AND               shift, and go to state 65
    BITWISE_OR        shift, and go to state 66
    BITWISE_AND       shift, and go to state 67
    '='               shift, and go to state 68
    '<'               shift, and go to state 69
    '>'               shift, and go to state 70
    '+'               shift, and go to state 71
    '-'               shift, and go to state 72
    '*'               shift, and go to state 73
    '/'               shift, and go to state 74
    ')'               shift, and go to state 92


State 50

   76 stmt_seq: stmt .

    $default  reduce using rule 76 (stmt_seq)


State 51

   77 stmt_seq: stmt_seq . stmt
   79 stmt_seq_optional: stmt_seq .

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21
    '{'                        shift, and go to state 22
    ';'                        shift, and go to state 23

    $default  reduce using rule 79 (stmt_seq_optional)

    access_expr          go to state 26
    expr                 go to state 27
    stmt                 go to state 93
    interpolated_string  go to state 34


State 52

   75 stmt: '{' stmt_seq_optional . '}'

    '}'  shift, and go to state 94


State 53

    0 $accept: program $end .

    $default  accept


State 54

    2 program: program program_element .

    $default  reduce using rule 2 (program)


State 55

   22 access_expr: access_expr '.' . IDENTIFIER
   23            | access_expr '.' . IDENTIFIER '(' expr_seq_optional ')'

    IDENTIFIER  shift, and go to state 95


State 56

   34 expr: expr PLUS_ASSIGN . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 96
    interpolated_string  go to state 34


State 57

   35 expr: expr MINUS_ASSIGN . expr

    IDENTIFIER                 shift, and go to state 1
    INTEGER                    shift, and go to state 2
    FLOATING_POINT             shift, and go to state 3
    FLOAT_LITERAL              shift, and go to state 4
    DECIMAL_LITERAL            shift, and go to state 5
    NULL_KW                    shift, and go to state 6
    TRUE_KW                    shift, and go to state 7
    FALSE_KW                   shift, and go to state 8
    INTERPOLATED_STRING_START  shift, and go to state 15
    INCREMENT                  shift, and go to state 16
    DECREMENT                  shift, and go to state 17
    '+'                        shift, and go to state 18
    '-'                        shift, and go to state 19
    '!'                        shift, and go to state 20
    '('                        shift, and go to state 21

    access_expr          go to state 26
    expr                 go to state 97
    interpolated_string  go to state 34


State 58

   36 expr: expr MULTIPLY_ASSIGN . expr
